Moved preloading to controller

--- a/app/views/photo_gallery/single.html
+++ b/app/views/photo_gallery/single.html
@@ -3,12 +3,18 @@
 </div>
 
 <script>
+
+	steroids.view.navigationBar.show('Photo');
+
 	function messageReceived(event) {
 		// check that the message is intended for us
 		if (event.data.recipient == "singleView") {
-			steroids.view.navigationBar.show('Photo');
-			$('#single .card').html('<img src="' + event.data.src + '"><h3>' + event.data.title + '</h3>');
+			$('#single .card').html(
+				'<img src="' + event.data.src + '"><h3>' + event.data.title + '</h3>'
+			);
 		}
 	}
+
 	window.addEventListener("message", messageReceived);
+
 </script>
